crates/toml/tests/snapshots/invalid/float/exp-point-1.stderr
TOML parse error at line 1, column 18
  |
1 | exp-point-1 = 1e2.3
  |                  ^^
invalid float, expected nothing

---
TOML parse error at line 1, column 15
  |
1 | exp-point-1 = 1e2.3
  |               ^^^^^
invalid float
